--- a/files/六级.md
+++ b/files/六级.md
@@ -55,10 +55,10 @@
 ### 意义措施类
 
 ==首段：话题引入 + 主题阐述==
-	**In a rapidly developing society,It is generally accepted that <u>innovation</u> plays a fundamental role <u>in personal progress and national development</u>. <u>Innovation</u>,which exerts a great impact on our life, has captured a great deal of public attention.** 
+	**It is generally accepted that <u>innovation</u> plays a fundamental role <u>in personal progress and national development</u>. <u>Innovation</u>,which exerts a great impact on our life, has captured a great deal of public attention.** 
 
 ==中间段：背景句 + 论据 + 论点==
-	**There are two fundamental factors contributing to this phenomenon. On the one hand,in a society where competition in job markets becomes increasingly fierce(stiff) ,（社会竞争层面）/ In an age where globalization and information technology revolution are developing(advancing) rapidly ,（科技发展层面）/ In an age where people’s standard of living has been raised significantly,（经济发展层面）/ In an age where parents and educators always focus on sth,（教育层面）/ In an age where sth have（not）been highly advocated in mass media（媒体层面），an increasing number of people find it helpful/difficult/harmful <u>to enhance our competitiveness</u>.（竞争力）Thus <u>continuous self innovation</u> is a wise choice to meet the ever-growing demands of our society.On the other hand, people with <u>the spirit of innovation</u> can not only <u>accumulate various knowledge</u>,but also** **<u>promote social science and technology innovation</u>.（not only...but also...写一大一小两方面作用）.A typical example is Einstein,honored for his success in the theory of relativism,is always remembered for the spirit of innovation,which makes him one of the greatest scientists./ Apple,honored for its success in mobile phone and personal computer,is always remembered for its collaboration with Google in software,which makes them the most competitive technology company in the world. / Confucius,honored for his success in education and philosophy in ancient times,is always remembered for showing a great respect to others,which makes him the most famous educator and philosopher.**
+	**There are two fundamental factors contributing to this phenomenon. On the one hand,in a society where competition in job markets becomes increasingly fierce(stiff) ,（社会竞争层面）/ In an age where globalization and information technology revolution are developing(advancing) rapidly ,（科技发展层面）/ In an age where people’s standard of living has been raised significantly,（经济发展层面）/ In an age where parents and educators always focus on quality-oriented education,（教育层面）/ In an age where sth have（not）been highly advocated in mass media（媒体层面），/In an age where interpersonal relationships are becoming increasingly complex（人际关系层面）, an increasing number of people find <u>it</u> helpful/difficult/harmful <u>to enhance our competitiveness</u>.（竞争力）Thus <u>continuous self innovation</u> is a wise choice to <u>meet the ever-growing demands of our society.</u>On the other hand, people with <u>the spirit of innovation</u> can not only <u>accumulate various knowledge</u>,but also** **<u>promote social science and technology innovation</u>.（not only...but also...写一大一小两方面作用）.A typical example is Einstein,honored for his success in the theory of relativism,is always remembered for the spirit of innovation,which makes him one of the greatest scientists./ Apple,honored for its success in mobile phone and personal computer,is always remembered for its collaboration with Google in software,which makes them the most competitive technology company in the world. / Confucius,honored for his success in education and philosophy in ancient times,is always remembered for showing a great respect to others,which makes him the most famous educator and philosopher.**
 
 ==结尾段：总结 + 措施==
 
@@ -66,7 +66,19 @@
 
 > overcome difficulties and challenges 克服困难和挑战
 >
+> improve Interpersonal relationships 改善人际关系
+>
 > achieve success 取得成功
+>
+> developing concrete skills 培养实用技能
+>
+> enhancing their personal capabilities 提高个人能力
+>
+> Improve interpersonal communication skills 提高人际交往能力
+>
+> inner qualities and personal abilities 内在品质和个人能力
+>
+> a valuable personal trait 宝贵的个人品质
 >
 > accumulate knowledge 增长知识 broaden our horizons 开拓视野 expand social circle 扩大社交圈
 >
@@ -136,15 +148,7 @@
 >
 > conquer/overcome 克服
 >
-> developing concrete skills 培养实用技能
->
-> enhancing their personal capabilities 提高个人能力
->
-> inner qualities and personal abilities 内在品质和个人能力
->
 > be able to 能够做某事
->
-> a valuable personal trait 宝贵的个人品质
 >
 > a sign of strong interpersonal competence 人际交往能力的标志
 >
@@ -162,6 +166,7 @@
 >
 > unable to/inability to 不能
 >
+> 
 
 ### 观点选择类
 
@@ -181,7 +186,7 @@
 
 ==首段：话题引入 + 主题阐述==
 
-​	**In a rapidly developing society, There is little doubt that the development of <u>technology</u> plays an increasingly important role in our life. Robots,which is held by many to be controversial,will capture a great deal of public attention <u>if robots replace human beings in the future.</u>**
+​	**In a rapidly developing society, There is little doubt that <u>the development of technology</u> plays an increasingly important role in our life. Robots,which is held by many to be controversial,will capture a great deal of public attention <u>if robots replace human beings in the future.</u>**
 
 ==中间段：过渡句 + 一方面 + 另一方面==
 
@@ -676,5 +681,47 @@
 >
 >jargon 行话，术语
 
+## 2023年6月（一）
 
+### 作文
+
+![image-20250529095744185](./六级.assets/image-20250529095744185.png)
+
+~~~
+	Today there is a growing awareness that mental well-being needs to be given as much attention as physical health.It is generally accepted that mental health plays a fundamental role in personal work and life. Mental health,which exerts a great impact on our life, has captured a great deal of public attention.
+
+	There are two fundamental factors contributing to this phenomenon. On the one hand,in a society where competition in job markets becomes increasingly fierce(stiff),an increasing number of people find the harm caused by mental stress may be greater than physical exhaustion. Thus attention to mental healthy is a wise choice in contemporary social.On the other hand, people with the great mental state can not only enhance our work efficiency,but also improve interpersonal relationships.
+
+	To sum up the reasons above, it is of great benefit for us to pay attention to mental well-being during college Only when young people truly realize the value of mental healthy,can they gain long-term benefits both mentally and practically. Meanwhile,the schools should also join in the efforts in promoting mental healthy education. 
+~~~
+
+## 2023年6月（二）
+
+### 作文
+
+![image-20250529111205903](./六级.assets/image-20250529111205903.png)
+
+~~~
+	When faced with differing opinions,we should try to reach agreement through friendly discussion and reasonable argument.It is generally accepted that friendly discussion and rational debate with others play a fundamental role in interpersonal relationships. Being friendly and reasonable,which exerts a great impact on our life, has captured a great deal of public attention.
+
+	There are two main reasons behind this phenomenon. On the one hand, in an age where interpersonal relationships are becoming increasingly complex, more and more people realize that friendly discussion and rational communication can improve the efficiency of cooperation. Therefore, it is a wise choice to adopt these approaches when working with others to accomplish tasks. On the other hand, people who are friendly and reasonable can not only improve their interpersonal skills but also promote social harmony.
+
+	To sum up, it is of great benefit for college students to engage in friendly discussions and rational arguments. Only when young people truly realize the importance of being friendly and reasonable can they gain long-term benefits both mentally and socially. Meanwhile, schools should also make efforts to promote quality-oriented education and cultivate students’ communication skills.
+~~~
+
+## 2023年6月（三）
+
+### 作文
+
+![image-20250529144946667](./六级.assets/image-20250529144946667.png)
+
+~~~
+	It is widely accepted that an important goal of education is to help students learn how to learn.It is generally accepted that master learning methods plays a fundamental role in personal progress. Master  learning methods,which exerts a great impact on our life, has captured a great deal of parents and educators attention. 
+
+	There are two fundamental factors contributing to this phenomenon. On the one hand, In an age where parents and educators always focus on quality-oriented education, an increasing number of people find <u>it</u> helpful/difficult/harmful <u>to enhance our competitiveness</u>.（竞争力）Thus <u>continuous self innovation</u> is a wise choice to <u>meet the ever-growing demands of our society.</u>On the other hand, people with <u>the spirit of innovation</u> can not only <u>accumulate various knowledge</u>,but also** **<u>promote social science and technology innovation</u>.（not only...but also...写一大一小两方面作用）.A typical example is Einstein,honored for his success in the theory of relativism,is always remembered for the spirit of innovation,which makes him one of the greatest scientists./ Apple,honored for its success in mobile phone and personal computer,is always remembered for its collaboration with Google in software,which makes them the most competitive technology company in the world. / Confucius,honored for his success in education and philosophy in ancient times,is always remembered for showing a great respect to others,which makes him the most famous educator and philosopher.**
+
+==结尾段：总结 + 措施==
+
+​	**To sum up/Based on the reasons above, it is of great benefit for us to <u>cultivate innovative</u> spirit during college and <u>learn how to create some new inventions.</u> Only when____[younster/young people/humans]truly realize the value of____,can they gain long-term benefits both mentally and practically. Meanwhile,the school should also join in the efforts in promoting quality-oriented education**
+~~~
 
