--- a/files/六级.md
+++ b/files/六级.md
@@ -1,7 +1,3 @@
-
-
-
-
 For this part,you are allowed 30 minutes to write an essay than begins with the sentence "People are now increasingly aware of the danger of 'appearance anxiety' or being obsessed with one's looks." You can make comments,cite examples or use your personal experiences to develop your essay.You should write at least 150 words but not more than 200 words.*
 
 ~~~
@@ -342,6 +338,8 @@ For this part,you are allowed 30 minutes to write an essay than begins with the 
 >Communist Party of China 中国共产党
 >
 >Congress 国会、代表大会、议会
+>
+>hold 召开
 >
 >National Congress of the Communist  Party of China 中国共产党全国代表大会
 >
@@ -735,9 +733,52 @@ For this part,you are allowed 30 minutes to write an essay than begins with the 
 
 ### 翻译
 
-![image-20250601185129073](C:\Users\sane_\AppData\Roaming\Typora\typora-user-images\image-20250601185129073.png)
+![image-20250604173645631](./六级.assets/image-20250604173645631.png)
 
 ~~~
 	In recent years, Chinese cities have been developing rapidly, and the urban living environment has been significantly improved.Many cities have been striving to explore a path of high-quality urban development with Chinese characteristics. Urban functions have been continuously improved, and governance capacity has been significantly enhanced.China has been continuously carrying out urban ecological restoration and functional improvement, comprehensively renovating old residential communities, vigorously promoting urban landscaping and pollution elimination. Meanwhile, the country is also advancing systematic urban infrastructure development, conducting thorough surveys of buildings and municipal facilities, as well as identifying and addressing potential safety hazards. These efforts aim to create a high-quality living environment for citizens and make cities more beautiful, safer, and more livable.
 ~~~
 
+## 2023年12月（一）
+
+### 作文
+
+![image-20250604140003232](./六级.assets/image-20250604140003232.png)
+
+```
+	As is known to all,gaining a sound knowledge of the basics is of vital importance for students to master an academic subject.  Mastering the basics comprehensively,which exerts a great fact on learning academic subject,has captured a great deal of attentuon from teachers and educators.
+	There are two fundamental factors contributing to this phenomenon.On the one hand,in a society where competition in job markets becomes increasingly fierce, an increasing number of students find that mastering the solid basics of academic subject can enhance their competitiveness.On the other hand,by learning the foundation of a subject,can not only increases our interest in it,but also enables us to apply what we have learned more flexibly.
+	To sum up the reasons above, it is of great benefit for us to pay attention to mastering basics of subject during college. Only when young people truly realize the importance of basic,can they gain long-term benefits both mentally and practically. Meanwhile,schools should also join in the efforts in promoting basic education.
+```
+
+### 翻译
+
+![image-20250604144848377](./六级.assets/image-20250604144848377.png)
+
+~~~
+	In China, with the advent of an aging society, elderly care has received widespread attention. People are mainly talking about what kind of elderly care model should be used. Most people believe that elderly care needs to be diversified. Through government guidance and social participation, more and better elderly care institutions can be established, community service centers can be improved, home-based self-service elderly care can be encouraged, and a model combining family-based elderly care and social elderly care can also be promoted. With the continuous increase in government and society's investment in elderly care services, elderly care facilities will be constantly upgraded, and the quality of services will gradually improve. The lives of the elderly will become more convenient, comfortable, healthy and happy.
+~~~
+
+```
+	In China, with the advent of an aging society, elderly care has received widespread attention. People are mainly talking about what kind of elderly care model should be used.Most people think that elderly care needs to be diverse.The government can guide and society can join in to build more and better elderly care centers, improve community service centers, encourage home-based care, and promote a combination of family care and social care.As the government and society keep investing more in elderly care services, elderly facilities will keep improving, service quality will get better step by step, and seniors’ lives will become more convenient, comfortable, healthy, and happy.
+```
+
+>the advent of ...到来
+>
+>aging society 老龄化社会
+>
+>elderly care 养老
+>
+>received widespread attention 收到广泛关注
+>
+>kind of 种类
+>
+>believe that 认为
+>
+>through 通过 ...
+>
+>goverment guidance and social participation 政府指导和社会参与
+>
+>convenient 方便
+>
+>investment 投入
