--- a/files/六级.md
+++ b/files/六级.md
@@ -769,7 +769,7 @@ For this part,you are allowed 30 minutes to write an essay than begins with the 
 >
 >elderly care 养老
 >
->received widespread attention 收到广泛关注
+>received widespread attention 受到广泛关注
 >
 >kind of 种类
 >
@@ -800,6 +800,71 @@ For this part,you are allowed 30 minutes to write an essay than begins with the 
 ![image-20250604213332772](./六级.assets/image-20250604213332772.png)
 
 ~~~
-	With development of economy and society,China's population-structure has been changed observably and generally step to aging societ
+	With the development of the economy and society,China's population structure has changed significantly and is gradually entering an aging society. The elderly population in China will continue to increase and the tread of population aging will become more obvious. To address the various challenges brought about by aging population, the nation is actively to taking measures to increase support for eldly care. By refroming the social security system, the goverment has continuously increased the funds for social security and gradually expended the coverage of social security to benefit more elderly people. The goverment also encourages various social groups to privode services for the elderly.With the joint efforts of the government and social groups, the elderly will live a happier life.
 ~~~
 
+>obvious 明显
+>
+>to adress 为解决
+>
+>various 多种
+>
+>entering + 名词 步入
+>
+>is actively to taking measures to 积极采取措施
+>
+>reform 改革
+>
+>coverage of ...的范围
+>
+>to benefit 使受益
+>
+>with the joint efforts of ... and ... 在...和...的共同努力下
+
+## 2023年12月（三）
+
+### 作文
+
+![image-20250605102447110](./六级.assets/image-20250605102447110.png)
+
+~~~
+	With their valuable skills and experience, elderly people can continue to make significant contributions to society.It is generally accepted that young people play a fundamental role in society. However, elderly people also exert a great impact in society, which has captured a great deal of public attention.
+	There are two fundamental factors contributing to this phenomenon.On the one hand, in a society that generally entring an aging population, an increasing number of people find that more and more elderly people entring the job markets. They, like young people, also make contributions to society. On the other hand, elderly people can help young people share family responsibilities, such as taking care of children.
+	To sum up the reasons above, we should pay more attention to the contributions of elderly people to society. Only when society truly realizes the importance of elderly people, can it achieve long-term development and prosperity. Meanwhile, the government and society should also make joint efforts to protect the rights and interests of the elderly.
+~~~
+
+>can 表示具备某种能力 
+>
+>enable ... to 使某人能做某事
+>
+>generally entring an aging population 逐渐步入人口老龄化
+>
+>share burdens/responsibilites 分担负担/责任
+>
+>make joint efforts to 共同努力
+
+### 翻译
+
+![image-20250605111816036](./六级.assets/image-20250605111816036.png)
+
+~~~
+	In recent years, the elderly population in China has continued to increase. The Chinese government is taking various measures to promote the construction of the elderly care service system and ensure that the elderly enjoy a healthy and happy life in their later years. All kinds of elderly care service institutions have been built across the country.In order to improve the service quality of elderly care institutions, the government has issued a series of standards and strengthened the supervision of elderly care institutions. Many cities have set up community canteens to facilitate meals for the elderly, providing them with affordable meals. Elderly people with limited mobility can also enjoy door-to-door meal delivery services. Meanwhile, China is also actively exploring other elderly care models such as home-based and community-based care to ensure that all the elderly are well cared for in their old age.  
+~~~
+
+>construction of ...的建设
+>
+>all kinds of 各种各样的
+>
+>across the country 全国
+>
+>In order to 为了
+>
+>issue 颁布
+>
+>institution 机构
+>
+>set up 建立
+>
+>facilitate 使方便
+>
+>door-to-door meal delivery service 上门送餐服务
